force-app/main/default/objects/Customer_Information_Sheet__c/Customer_Information_Sheet__c.object-meta.xml
<CustomObject>
    <label>Customer Information Sheet</label>
    <nameField>
        <displayFormat>CIS{0000}</displayFormat>
        <label>CIS #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Information Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>