force-app/main/default/objects/Customer_Information_Sheet__c/fields/Account_S2S__c.field-meta.xml
<CustomField>
    <fullName>Account_S2S__c</fullName>
    <label>Account S2S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>