force-app/main/default/objects/Customer_Information_Sheet__c/fields/Additional_Applications_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Applications_Services__c</fullName>
    <label>Additional Applications / Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>CER - Forward Collision Warning</fullName>
            </value>
            <value>
                <fullName>CER - Stability Control &amp; Lane Departure</fullName>
            </value>
            <value>
                <fullName>COPILOT Truck</fullName>
            </value>
            <value>
                <fullName>CSA Safety Performance Service</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Driver Login</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Odometer Positions</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Omnitracs Hours of Service</fullName>
            </value>
            <value>
                <fullName>State Miles Counter</fullName>
            </value>
            <value>
                <fullName>Trip Manager</fullName>
            </value>
            <value>
                <fullName>Vehicle Inspection Report</fullName>
            </value>
            <value>
                <fullName>Qualcomm Hours of Service</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>