force-app/main/default/objects/Customer_Information_Sheet__c/fields/Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Information Sheets (Admin Contact)</relationshipLabel>
    <relationshipName>Customer_Information_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>