force-app/main/default/objects/Customer_Information_Sheet__c/fields/Ancillary_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Hardware__c</fullName>
    <label>Ancillary Hardware</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aux Sensor</fullName>
            </value>
            <value>
                <fullName>Buzzer</fullName>
            </value>
            <value>
                <fullName>Cargo Sensor</fullName>
            </value>
            <value>
                <fullName>Door Sensor</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>Panic Button</fullName>
            </value>
            <value>
                <fullName>RMWL</fullName>
            </value>
            <value>
                <fullName>VMU</fullName>
            </value>
            <value>
                <fullName>Wireless Panic Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>