force-app/main/default/objects/Customer_Information_Sheet__c/fields/Are_Multiple_Authorities_Used__c.field-meta.xml
<CustomField>
    <fullName>Are_Multiple_Authorities_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Multiple Authorities Used?</label>
    <type>Checkbox</type>
</CustomField>