force-app/main/default/objects/Customer_Information_Sheet__c/fields/Are_team_drivers_used__c.field-meta.xml
<CustomField>
    <fullName>Are_team_drivers_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are team drivers used?</label>
    <type>Checkbox</type>
</CustomField>