force-app/main/default/objects/Customer_Information_Sheet__c/fields/Are_the_trucks_equipped_with_PTO__c.field-meta.xml
<CustomField>
    <fullName>Are_the_trucks_equipped_with_PTO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the fleet have trucks that are equipped with Power Take Off (PTO)?</inlineHelpText>
    <label>Are the trucks equipped with PTO?</label>
    <type>Checkbox</type>
</CustomField>