force-app/main/default/objects/Customer_Information_Sheet__c/fields/Are_there_any_vehicles_without_an_ECM__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_vehicles_without_an_ECM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any vehicles without an ECM (models that are pre-1996)?</inlineHelpText>
    <label>Are there any vehicles without an ECM?</label>
    <type>Checkbox</type>
</CustomField>