force-app/main/default/objects/Customer_Information_Sheet__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <inlineHelpText>Must be the DOT Registered Name</inlineHelpText>
    <label>Carrier Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>