force-app/main/default/objects/Customer_Information_Sheet__c/fields/Comm_Link_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Comm_Link_Agreement_Sent__c</fullName>
    <label>Comm Link Agreement Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>