force-app/main/default/objects/Customer_Information_Sheet__c/fields/Comm_Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Comm_Link_Type__c</fullName>
    <label>Comm Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Dial Up</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>