force-app/main/default/objects/Customer_Information_Sheet__c/fields/Competitive_Issues__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Issues__c</fullName>
    <label>Competitive Issues</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>