force-app/main/default/objects/Customer_Information_Sheet__c/fields/Customers_Primary_Reason_for_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Customers_Primary_Reason_for_Purchase__c</fullName>
    <label>Customer&apos;s Primary Reason for Purchase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>