force-app/main/default/objects/Customer_Information_Sheet__c/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>New_Customer_Information_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>