force-app/main/default/objects/Customer_Information_Sheet__c/fields/Default_US_duty_cycle__c.field-meta.xml
<CustomField>
    <fullName>Default_US_duty_cycle__c</fullName>
    <label>Default Duty Cycle (HOS Rule Setting)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US 8/70 hrs. (Dec 2014)</fullName>
            </value>
            <value>
                <fullName>US 7/60 hrs. (Dec 2014)</fullName>
            </value>
            <value>
                <fullName>CAN 7/70 hrs.</fullName>
            </value>
            <value>
                <fullName>CAN 14/120 hrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>