force-app/main/default/objects/Customer_Information_Sheet__c/fields/Device_Type_Comment__c.field-meta.xml
<CustomField>
    <fullName>Device_Type_Comment__c</fullName>
    <inlineHelpText>Please comment if device type is unknown</inlineHelpText>
    <label>Device Type Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>