force-app/main/default/objects/Customer_Information_Sheet__c/fields/Device_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Type_Name__c</fullName>
    <inlineHelpText>Please list all certified devices</inlineHelpText>
    <label>Device Type Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>