force-app/main/default/objects/Customer_Information_Sheet__c/fields/Dispatch_Software__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Software__c</fullName>
    <label>Dispatch Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Add-On Systems</fullName>
            </value>
            <value>
                <fullName>CAMS</fullName>
            </value>
            <value>
                <fullName>Carrier Logistics</fullName>
            </value>
            <value>
                <fullName>Choice Technologies</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Creative Systems</fullName>
            </value>
            <value>
                <fullName>Daffron</fullName>
            </value>
            <value>
                <fullName>Descartes</fullName>
            </value>
            <value>
                <fullName>Dispatching Solutions INc.</fullName>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
            <value>
                <fullName>GPSNet</fullName>
            </value>
            <value>
                <fullName>In-House / Home Grown</fullName>
            </value>
            <value>
                <fullName>Innovative-(ICC)</fullName>
            </value>
            <value>
                <fullName>Keystone</fullName>
            </value>
            <value>
                <fullName>McLeod Software</fullName>
            </value>
            <value>
                <fullName>Melton Technologies (MTI)</fullName>
            </value>
            <value>
                <fullName>Milsoft</fullName>
            </value>
            <value>
                <fullName>NISC</fullName>
            </value>
            <value>
                <fullName>North American Dispatch Systems</fullName>
            </value>
            <value>
                <fullName>Omni Information Systems</fullName>
            </value>
            <value>
                <fullName>Paradigm</fullName>
            </value>
            <value>
                <fullName>Partner Software</fullName>
            </value>
            <value>
                <fullName>PCS Software</fullName>
            </value>
            <value>
                <fullName>Profit Tools</fullName>
            </value>
            <value>
                <fullName>Progressive Data Solutions</fullName>
            </value>
            <value>
                <fullName>Prophesy</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>RoadVision</fullName>
            </value>
            <value>
                <fullName>Show Me</fullName>
            </value>
            <value>
                <fullName>Strategic Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>