force-app/main/default/objects/Customer_Information_Sheet__c/fields/Do_drivers_use_the_Short_Haul_exemption__c.field-meta.xml
<CustomField>
    <fullName>Do_drivers_use_the_Short_Haul_exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do drivers use the Short Haul exemption?</description>
    <inlineHelpText>Do drivers use the Short Haul exemption (the Air Mile Exemption)?</inlineHelpText>
    <label>Do drivers use the Short Haul exemption?</label>
    <type>Checkbox</type>
</CustomField>