force-app/main/default/objects/Customer_Information_Sheet__c/fields/Do_they_plan_to_track_PTO_fuel_usage__c.field-meta.xml
<CustomField>
    <fullName>Do_they_plan_to_track_PTO_fuel_usage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the fleet has vehicles equipped with PTO (Power Take Off), do they plan to track PTO fuel usage?</inlineHelpText>
    <label>Do they plan to track PTO fuel usage?</label>
    <type>Checkbox</type>
</CustomField>