force-app/main/default/objects/Customer_Information_Sheet__c/fields/DOT_Number__c.field-meta.xml
<CustomField>
    <fullName>DOT_Number__c</fullName>
    <description>DOT Number</description>
    <label>DOT Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>