force-app/main/default/objects/Customer_Information_Sheet__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent to PANA</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>