force-app/main/default/objects/Customer_Information_Sheet__c/fields/Eval_Contingency_Term__c.field-meta.xml
<CustomField>
    <fullName>Eval_Contingency_Term__c</fullName>
    <label>Eval Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>