force-app/main/default/objects/Customer_Information_Sheet__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <formula>Account__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax</label>
    <type>Text</type>
</CustomField>