force-app/main/default/objects/Customer_Information_Sheet__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <formula>Account__r.Fleetsize__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>