force-app/main/default/objects/Customer_Information_Sheet__c/fields/Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Type__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Fleet</fullName>
                <default>true</default>
                <label>Private Fleet</label>
            </value>
            <value>
                <fullName>Owner Operator</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>