force-app/main/default/objects/Customer_Information_Sheet__c/fields/HOS_Rule__c.field-meta.xml
<CustomField>
    <fullName>HOS_Rule__c</fullName>
    <label>HOS Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>