force-app/main/default/objects/Customer_Information_Sheet__c/fields/HOS_Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>HOS_Rule_Set__c</fullName>
    <label>HOS Rule Set</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HOS_Rule__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>US 8/70 hr</fullName>
            </value>
            <value>
                <fullName>US 7/60 hr</fullName>
            </value>
            <value>
                <fullName>CAN 7/70 hr</fullName>
            </value>
            <value>
                <fullName>CAN 14/120 hr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>