force-app/main/default/objects/Customer_Information_Sheet__c/fields/Host_Platform__c.field-meta.xml
<CustomField>
    <fullName>Host_Platform__c</fullName>
    <label>Host Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Linux/Unix</fullName>
            </value>
            <value>
                <fullName>IBM iSeries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>