force-app/main/default/objects/Customer_Information_Sheet__c/fields/Implementation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact does not exist in the Account selected.Please select a different account.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Information Sheets (Implementation Contact)</relationshipLabel>
    <relationshipName>New_Customer_Information_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>