force-app/main/default/objects/Customer_Information_Sheet__c/fields/Implementation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Contact_Email__c</fullName>
    <formula>Implementation_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Contact&apos;s Email</label>
    <type>Text</type>
</CustomField>