force-app/main/default/objects/Customer_Information_Sheet__c/fields/Implementation_Contact_Legacy_S2S__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Contact_Legacy_S2S__c</fullName>
    <label>Implementation Contact Legacy S2S</label>
    <length>225</length>
    <type>Text</type>
</CustomField>