force-app/main/default/objects/Customer_Information_Sheet__c/fields/Implementation_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Contact_Phone__c</fullName>
    <formula>Implementation_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Contact Phone</label>
    <type>Text</type>
</CustomField>