force-app/main/default/objects/Customer_Information_Sheet__c/fields/Installer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Installer_Contact_Email__c</fullName>
    <formula>Installer_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Contact Email</label>
    <type>Text</type>
</CustomField>