force-app/main/default/objects/Customer_Information_Sheet__c/fields/Installer_Contact_Id_S2S__c.field-meta.xml
<CustomField>
    <fullName>Installer_Contact_Id_S2S__c</fullName>
    <label>Installer Contact Id S2S</label>
    <length>225</length>
    <type>Text</type>
</CustomField>