force-app/main/default/objects/Customer_Information_Sheet__c/fields/Installer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Installer_Contact_Phone__c</fullName>
    <formula>Installer_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer Contact Phone</label>
    <type>Text</type>
</CustomField>