force-app/main/default/objects/Customer_Information_Sheet__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>