force-app/main/default/objects/Customer_Information_Sheet__c/fields/Is_personal_conveyance_used_by_drivers__c.field-meta.xml
<CustomField>
    <fullName>Is_personal_conveyance_used_by_drivers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is personal conveyance used by drivers?</label>
    <type>Checkbox</type>
</CustomField>