force-app/main/default/objects/Customer_Information_Sheet__c/fields/Is_the_Big_Day_16_hour_exception_used__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Big_Day_16_hour_exception_used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the &quot;Big Day&quot; 16-hour exception used?</description>
    <label>Is the &quot;Big Day&quot; 16-hour exception used?</label>
    <type>Checkbox</type>
</CustomField>