force-app/main/default/objects/Customer_Information_Sheet__c/fields/Last_Pana_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Pana_Email_Sent__c</fullName>
    <description>The field stores the last time an email was sent to PANA from the NCIS record.</description>
    <label>Last Pana Email Sent</label>
    <type>DateTime</type>
</CustomField>