force-app/main/default/objects/Customer_Information_Sheet__c/fields/Make_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Make_Model_Year__c</fullName>
    <description>Enter Make, Model, Year and Quantity each on seperate line in the same order.</description>
    <inlineHelpText>Enter Make, Model, Year and Quantity each on seperate line in the same order.</inlineHelpText>
    <label>Make, Model, Year, Quantity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>