force-app/main/default/objects/Customer_Information_Sheet__c/fields/MIS_Contact__c.field-meta.xml
<CustomField>
    <fullName>MIS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>New_Customer_Information_Sheets2</relationshipName>
    <type>Lookup</type>
</CustomField>