force-app/main/default/objects/Customer_Information_Sheet__c/fields/MIS_Contact_s_Email__c.field-meta.xml
<CustomField>
    <fullName>MIS_Contact_s_Email__c</fullName>
    <formula>MIS_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MIS Contact&apos;s Email</label>
    <type>Text</type>
</CustomField>