force-app/main/default/objects/Customer_Information_Sheet__c/fields/Mobile_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device_Type__c</fullName>
    <inlineHelpText>Please see XRS Website for full list of certified devices (http://xrscorp.com/devices/)</inlineHelpText>
    <label>Mobile Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>